force-app/main/default/objects/Legal_Entity__c/fields/Account_Name_Service_Tax__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Service_Tax__c</fullName>
    <description>Service tax cheque in favor of</description>
    <label>Account Name (Service Tax)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>