force-app/main/default/objects/Legal_Entity__c/fields/Account_Name_TDS__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_TDS__c</fullName>
    <label>Account Name(TDS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>