force-app/main/default/objects/Legal_Entity__c/fields/Account_Number_GST_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_GST_Deposit__c</fullName>
    <label>Account Number (GST Deposit)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>