force-app/main/default/objects/Legal_Entity__c/fields/Account_Number_Interest__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Interest__c</fullName>
    <label>Account Number (Interest)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>