force-app/main/default/objects/Legal_Entity__c/fields/Account_Number_TDS__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_TDS__c</fullName>
    <label>Account Number(TDS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>