force-app/main/default/objects/Legal_Entity__c/fields/Account_Type_Flat_Cost__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_Flat_Cost__c</fullName>
    <label>Account Type(Flat Cost)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Escrow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>