force-app/main/default/objects/Legal_Entity__c/fields/Bank_Name_TDS__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_TDS__c</fullName>
    <label>Bank Name(TDS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>