force-app/main/default/objects/Legal_Entity__c/fields/Branch_Flat_Cost__c.field-meta.xml
<CustomField>
    <fullName>Branch_Flat_Cost__c</fullName>
    <label>Branch(Flat Cost)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>