force-app/main/default/objects/Legal_Entity__c/fields/Branch_GST__c.field-meta.xml
<CustomField>
    <fullName>Branch_GST__c</fullName>
    <label>Branch(GST)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>