force-app/main/default/objects/Legal_Entity__c/fields/Branch_TDS__c.field-meta.xml
<CustomField>
    <fullName>Branch_TDS__c</fullName>
    <label>Branch(TDS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>