force-app/main/default/objects/Legal_Entity__c/fields/CIN__c.field-meta.xml
<CustomField>
    <fullName>CIN__c</fullName>
    <description>Corporate Identification Number</description>
    <label>CIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>