force-app/main/default/objects/Legal_Entity__c/fields/Favouring_Interest__c.field-meta.xml
<CustomField>
    <fullName>Favouring_Interest__c</fullName>
    <label>Favouring (Interest)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>