force-app/main/default/objects/Legal_Entity__c/fields/Legal_Entity_Email__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Email__c</fullName>
    <label>Legal_Entity_Email</label>
    <type>Email</type>
</CustomField>