force-app/main/default/objects/Legal_Entity__c/fields/RDS_Address1__c.field-meta.xml
<CustomField>
    <fullName>RDS_Address1__c</fullName>
    <label>Address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>