force-app/main/default/objects/Legal_Entity__c/fields/RDS_Address2__c.field-meta.xml
<CustomField>
    <fullName>RDS_Address2__c</fullName>
    <label>Address2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>