force-app/main/default/objects/Legal_Entity__c/fields/RDS_Allow_Auto_Increment_MRN__c.field-meta.xml
<CustomField>
    <fullName>RDS_Allow_Auto_Increment_MRN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Auto Increment MRN</label>
    <type>Checkbox</type>
</CustomField>