force-app/main/default/objects/Legal_Entity__c/fields/RDS_City__c.field-meta.xml
<CustomField>
    <fullName>RDS_City__c</fullName>
    <label>City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>