force-app/main/default/objects/Legal_Entity__c/fields/RDS_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>RDS_Company_ID__c</fullName>
    <label>Company ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>