force-app/main/default/objects/Legal_Entity__c/fields/RDS_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>RDS_Company_Name__c</fullName>
    <label>Company Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>