force-app/main/default/objects/Legal_Entity__c/fields/RDS_Master_Config__c.field-meta.xml
<CustomField>
    <fullName>RDS_Master_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Config</label>
    <referenceTo>Master__c</referenceTo>
    <relationshipLabel>Legal Entities</relationshipLabel>
    <relationshipName>Legal_Entities</relationshipName>
    <type>Lookup</type>
</CustomField>