force-app/main/default/objects/Legal_Entity__c/fields/RDS_Service_Tax_No__c.field-meta.xml
<CustomField>
    <fullName>RDS_Service_Tax_No__c</fullName>
    <label>Service Tax No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>