force-app/main/default/objects/Legal_Entity__c/fields/RDS_TDS_Circle__c.field-meta.xml
<CustomField>
    <fullName>RDS_TDS_Circle__c</fullName>
    <label>TDS Circle</label>
    <length>30</length>
    <type>Text</type>
</CustomField>