force-app/main/default/objects/Legal_Entity__c/fields/Rera_QR_Code_Image__c.field-meta.xml
<CustomField>
    <fullName>Rera_QR_Code_Image__c</fullName>
    <formula>IMAGE(Rera_QR_Code_URL__c, &quot;&quot;, 85.97, 90.70)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rera QR Code Image</label>
    <type>Text</type>
</CustomField>