force-app/main/default/objects/Legal_Entity__c/fields/Rera_QR_Code_URL__c.field-meta.xml
<CustomField>
    <fullName>Rera_QR_Code_URL__c</fullName>
    <label>Rera QR Code URL</label>
    <type>Url</type>
</CustomField>