force-app/main/default/objects/Legal_Entity__c/fields/SPV_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>SPV_Bank_Account__c</fullName>
    <label>SPV Bank Account</label>
    <length>20</length>
    <type>Text</type>
</CustomField>