force-app/main/default/objects/Legal_Entity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name_Flat_Cost__c</columns>
    <columns>Account_Number_Flat_Cost__c</columns>
    <columns>Account_Name_Service_Tax__c</columns>
    <columns>Account_Number_Service_tax__c</columns>
    <columns>Bank_Name_Flat_Cost__c</columns>
    <columns>Bank_Name_Service_tax__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>